# OpenGL-Shape-Demo

./: CMakeLists.txt  README.md  install.sh
Header Files/: Shape.h
Resources/Data/Indices/: cube.txt  dodecahedron.txt  icosahedron.txt  octagon.txt  octahedron.txt  pyramid.txt
Resources/Data/Vertices/: cube.txt  dodecahedron.txt  octagon.txt  octahedron.txt  pyramid.txt
Resources/Shaders/: default.frag  default.vert
assets/data/Indices/: cube.txt  icosahedron.txt
assets/data/Vertices/: cube.txt  icosahedron.txt
assets/shaders/: default.frag
desktop_entry/: graphicsdemo.desktop.in
include/: ShaderClass.h
include/glad/: glad.h
src/: ShaderClass.cpp  Shape.cpp  main.cpp
src/imgui/: imgui_impl_opengl3.cpp
